# art-crop-system

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PRESENTATION.md  README.md  SECURITY.md  ai_art_crop_system.py  art_crop_pipeline_final.py  crop_quality_validator.py  demo.py  gdrive_gallery_quality_crops.py  generate_demo_gif.py  marketing_demo.py  pyproject.toml  requirements.txt  showcase.py
assets/: demo.cast  marketing_demo.cast
examples/: crop_config.json
sample_output/: crop_report.json
tests/: __init__.py  test_crop_system.py
